made the image smaller and text wrap around image, and fixed the footer to remain at the bottom of page

--- a/style.css
+++ b/style.css
@@ -1,34 +1,57 @@
-/* * {
-    margin: 0;
-    padding: 0;
-    
-} */
-html, body {
+/* body, html {
     height: 100%;
-}
+} */
 
 body {
     font-family: 'Noto Sans', sans-serif;    
-    background-color: rgba(62, 99, 136, 0.753);
-    color: rgb(207, 226, 226);   
-    padding-top: 60px;
+    background-color: rgba(62, 99, 136, 0.753);    
+    background-repeat: no-repeat;
+    color: rgba(106, 135, 173, 0.986);   
+    padding-top: 90px;
+    
 }
 
-h1 {
-    margin-top: 50px;
-}
-
-.navbar-custom { 
-    margin-bottom: 10px;
+.navbar-custom {     
     background-color: rgb(33, 40, 53);     
 } 
-.wrapper {
+
+hr {
+    border: 2px solid rgba(17, 40, 88, 0.733);
+    border-radius: 5px;
+}
+
+.img-fluid {
+    height: auto; 
+    max-width: 100%;
+    vertical-align: top;
+    width: 300px;
+    float: left;
+    margin-right: 10px;
+    margin-bottom: 5px;
+    border-radius: 5px;
+    border: solid black 1px;
+    /* padding: 2px; */
+}
+.container {
+    display: flex;
+    flex-flow: wrap;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
     min-height: 100%;
+  }
+
+.card {
+    background-color: #ffffff;
+    font-size: 12px;
 }
-.main {
-    overflow: auto;
-    padding: 100px;
+.card-title{
+    font-size: 25px;
 }
+.card-text {
+    font-size: 20px;
+}
+
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
     p {
@@ -78,33 +101,11 @@ h1 {
     }
   }
   
-hr {
-    border: 2px solid rgba(17, 40, 88, 0.733);
-    border-radius: 5px;
-}
-/* .img-fluid {    
-    float: left;    
-    height: auto;
-    max-width: 100%;
-} */
-.portrait {
-    float: left;
-
-}
-/* img {
-    vertical-align: middle;
-    border: white;
-    border-radius: 5px;
-} */
-
-.card-body {
-    margin-top: 10px;
-    padding: 10px;
-    background-color: transparent;
-}
-footer {
-    margin-top: 2rem;
-    height: auto;
+footer {    
+    height: 60px;
+    margin-top: 75px;
+    clear: both;
     background-color: rgb(33, 40, 53);
-    position: sticky;    
+    position: relative;    
+    text-align: center;    
 }
